--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,ts,mjs}]
+[*.{js,ts,mjs,tsx}]
 indent_size = 4
 indent_style = tab
 block_comment_start = /*
